--- a/sky-server/pom.xml
+++ b/sky-server/pom.xml
@@ -39,10 +39,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <scope>compile</scope>
         </dependency>
-
+<!--        mysql-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
             <scope>runtime</scope>
         </dependency>
 
