--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -37,3 +37,10 @@ sky:
     admin-ttl: 72000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+
+    #阿里云
+    alioss:
+      endpoint: ${sky.alioss.endpoint}
+      access-key-id: ${sky.alioss.access-key-id}
+      access-key-secret: ${sky.alioss.access-key-secret}
+      bucket-name: ${bucket-name}
