店铺营业状态业务代码开发

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -11,3 +11,8 @@ sky:
     access-key-id: LTAI5tGzzZXBqKgX9icZiSzR
     access-key-secret: sbScjZLUGW11XoiVlrduNqqNNfKX9r
     bucket-name: sky-zhairuihao
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 10
