--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -42,10 +42,18 @@ sky:
     admin-ttl: 720000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
-
+    user-secret-key: itheima
+    user-ttl: 720000000
+    user-token-name: authentication
     #阿里云
-    alioss:
-      endpoint: ${sky.alioss.endpoint}
-      access-key-id: ${sky.alioss.access-key-id}
-      access-key-secret: ${sky.alioss.access-key-secret}
-      bucket-name: ${bucket-name}
+  alioss:
+    endpoint: ${sky.alioss.endpoint}
+    access-key-id: ${sky.alioss.access-key-id}
+    access-key-secret: ${sky.alioss.access-key-secret}
+    bucket-name: ${bucket-name}
+  # 微信小程序
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
+
+
